--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,11 +9,47 @@ iconvault_forecastfont.woff: iconvault_forecastfont-244d3dc37a37b682bb14350fb33e
 iconvault_forecastfont/index.woff: iconvault_forecastfont-244d3dc37a37b682bb14350fb33e2300.woff
 binding_light.png: binding_light-c6d8c50e8178579228f634d9efe65310.png
 binding_light/index.png: binding_light-c6d8c50e8178579228f634d9efe65310.png
+black_dress.png: black_dress-39c017a214193da1a730d0e30109cdc1.png
+black_dress/index.png: black_dress-39c017a214193da1a730d0e30109cdc1.png
+cafe.jpg: cafe-46186bf4ef40b5705e5689a358671c4e.jpg
+cafe/index.jpg: cafe-46186bf4ef40b5705e5689a358671c4e.jpg
+cream_pixels.png: cream_pixels-31a2559eac30a6275be03605e83e98d7.png
+cream_pixels/index.png: cream_pixels-31a2559eac30a6275be03605e83e98d7.png
+loading.gif: loading-c273f7252115c9a655748bff7874ffcf.gif
+loading/index.gif: loading-c273f7252115c9a655748bff7874ffcf.gif
+mac.png: mac-55b1339141fe5718dd06f5d0ed713453.png
+mac/index.png: mac-55b1339141fe5718dd06f5d0ed713453.png
+shirts.png: shirts-b410fb3f205ee42a0dd99526c0113d35.png
+shirts/index.png: shirts-b410fb3f205ee42a0dd99526c0113d35.png
+shoes.jpg: shoes-70f2b3b0d712ba2bced2ae76c259b40b.jpg
+shoes/index.jpg: shoes-70f2b3b0d712ba2bced2ae76c259b40b.jpg
+styles.jpg: styles-637859a4901bd1fc6759621e0d8459bd.jpg
+styles/index.jpg: styles-637859a4901bd1fc6759621e0d8459bd.jpg
+subtle_white_feathers.png: subtle_white_feathers-2d529a83c2e365107ec188e066a206b3.png
+subtle_white_feathers/index.png: subtle_white_feathers-2d529a83c2e365107ec188e066a206b3.png
 sunny.svg: sunny-6bd8a8fd8375981db521331d76140c45.svg
 sunny/index.svg: sunny-6bd8a8fd8375981db521331d76140c45.svg
-application.js: application-f7b7c310db69dde0a1f189528027cabb.js
-application/index.js: application-f7b7c310db69dde0a1f189528027cabb.js
-application.css: application-a8e6ed6aa3039e0d75ded5e4e6417329.css
-application/index.css: application-a8e6ed6aa3039e0d75ded5e4e6417329.css
+tags.png: tags-b262763ac3aa2acf430661ed12b692ff.png
+tags/index.png: tags-b262763ac3aa2acf430661ed12b692ff.png
+wang_dress.png: wang_dress-3fd44ccdce6d3fccbf7be14ec3b3f485.png
+wang_dress/index.png: wang_dress-3fd44ccdce6d3fccbf7be14ec3b3f485.png
+zappos_matching.png: zappos_matching-aef470990ec112a29755033b6d1b5c8c.png
+zappos_matching/index.png: zappos_matching-aef470990ec112a29755033b6d1b5c8c.png
+application.js: application-00e0de334aededf0deeb8a28335a997e.js
+application/index.js: application-00e0de334aededf0deeb8a28335a997e.js
+application.css: application-4dea793ca2a838fa552a606e6a2d8a3a.css
+application/index.css: application-4dea793ca2a838fa552a606e6a2d8a3a.css
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
+fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont/index.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+twitter/bootstrap/glyphicons-halflings-white/index.png: twitter/bootstrap/glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+twitter/bootstrap/glyphicons-halflings/index.png: twitter/bootstrap/glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
