--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,24 +1,18 @@
 ---
-iconvault_forecastfont.eot: iconvault_forecastfont-e32ce71ea67f33e6c20b175349798647.eot
-iconvault_forecastfont/index.eot: iconvault_forecastfont-e32ce71ea67f33e6c20b175349798647.eot
-iconvault_forecastfont.svg: iconvault_forecastfont-28aa7afaad370ab3c7a80395abb376bf.svg
-iconvault_forecastfont/index.svg: iconvault_forecastfont-28aa7afaad370ab3c7a80395abb376bf.svg
-iconvault_forecastfont.ttf: iconvault_forecastfont-c00f97c7e26f4039294f0e1a562336ef.ttf
-iconvault_forecastfont/index.ttf: iconvault_forecastfont-c00f97c7e26f4039294f0e1a562336ef.ttf
-iconvault_forecastfont.woff: iconvault_forecastfont-244d3dc37a37b682bb14350fb33e2300.woff
-iconvault_forecastfont/index.woff: iconvault_forecastfont-244d3dc37a37b682bb14350fb33e2300.woff
+brian.jpg: brian-64d1161c7ad0ec3893a509979ae764fc.jpg
+brian/index.jpg: brian-64d1161c7ad0ec3893a509979ae764fc.jpg
 cafe.jpg: cafe-46186bf4ef40b5705e5689a358671c4e.jpg
 cafe/index.jpg: cafe-46186bf4ef40b5705e5689a358671c4e.jpg
-ian.jpg: ian-1e990e8547ce3dc267e8ce35bd14ddaa.jpg
-ian/index.jpg: ian-1e990e8547ce3dc267e8ce35bd14ddaa.jpg
-lauren.jpg: lauren-f32120d20818b23a362402d529a8577d.jpg
-lauren/index.jpg: lauren-f32120d20818b23a362402d529a8577d.jpg
-lior.jpg: lior-d1e74443e57ff15bf6d8e8d1399a3b98.jpg
-lior/index.jpg: lior-d1e74443e57ff15bf6d8e8d1399a3b98.jpg
-loading.gif: loading-c273f7252115c9a655748bff7874ffcf.gif
-loading/index.gif: loading-c273f7252115c9a655748bff7874ffcf.gif
-mac.png: mac-55b1339141fe5718dd06f5d0ed713453.png
-mac/index.png: mac-55b1339141fe5718dd06f5d0ed713453.png
+ian.jpg: ian-f70908417d64b772905222b86705d22b.jpg
+ian/index.jpg: ian-f70908417d64b772905222b86705d22b.jpg
+lauren.jpg: lauren-94e269fbdf345de536b73b37183c719a.jpg
+lauren/index.jpg: lauren-94e269fbdf345de536b73b37183c719a.jpg
+lior.jpg: lior-84dd3759cab9c8a019253bdeb5b1d63c.jpg
+lior/index.jpg: lior-84dd3759cab9c8a019253bdeb5b1d63c.jpg
+loading.gif: loading-9455f792bad89a7260eb216ea0fd868a.gif
+loading/index.gif: loading-9455f792bad89a7260eb216ea0fd868a.gif
+mac.png: mac-121f5562db81c1c3fe550d50c169385e.png
+mac/index.png: mac-121f5562db81c1c3fe550d50c169385e.png
 shirts.png: shirts-b410fb3f205ee42a0dd99526c0113d35.png
 shirts/index.png: shirts-b410fb3f205ee42a0dd99526c0113d35.png
 shoes.jpg: shoes-70f2b3b0d712ba2bced2ae76c259b40b.jpg
@@ -31,7 +25,7 @@ zappos_matching.png: zappos_matching-aef470990ec112a29755033b6d1b5c8c.png
 zappos_matching/index.png: zappos_matching-aef470990ec112a29755033b6d1b5c8c.png
 application.js: application-f7b7c310db69dde0a1f189528027cabb.js
 application/index.js: application-f7b7c310db69dde0a1f189528027cabb.js
-application.css: application-78c9963735f719aa03fead4b84624b3d.css
-application/index.css: application-78c9963735f719aa03fead4b84624b3d.css
+application.css: application-10590df3a81b6a6aa95535bd9ee2da51.css
+application/index.css: application-10590df3a81b6a6aa95535bd9ee2da51.css
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
