--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -9,10 +9,12 @@ lauren.jpg: lauren-94e269fbdf345de536b73b37183c719a.jpg
 lauren/index.jpg: lauren-94e269fbdf345de536b73b37183c719a.jpg
 lior.jpg: lior-84dd3759cab9c8a019253bdeb5b1d63c.jpg
 lior/index.jpg: lior-84dd3759cab9c8a019253bdeb5b1d63c.jpg
-loading.gif: loading-9455f792bad89a7260eb216ea0fd868a.gif
-loading/index.gif: loading-9455f792bad89a7260eb216ea0fd868a.gif
+loading.gif: loading-c273f7252115c9a655748bff7874ffcf.gif
+loading/index.gif: loading-c273f7252115c9a655748bff7874ffcf.gif
 mac.png: mac-121f5562db81c1c3fe550d50c169385e.png
 mac/index.png: mac-121f5562db81c1c3fe550d50c169385e.png
+new compy copy.png: new compy copy-3b2671dde863856f16fbeca8fe04c584.png
+new compy copy/index.png: new compy copy-3b2671dde863856f16fbeca8fe04c584.png
 shirts.png: shirts-b410fb3f205ee42a0dd99526c0113d35.png
 shirts/index.png: shirts-b410fb3f205ee42a0dd99526c0113d35.png
 shoes.jpg: shoes-70f2b3b0d712ba2bced2ae76c259b40b.jpg
@@ -25,7 +27,7 @@ zappos_matching.png: zappos_matching-aef470990ec112a29755033b6d1b5c8c.png
 zappos_matching/index.png: zappos_matching-aef470990ec112a29755033b6d1b5c8c.png
 application.js: application-f7b7c310db69dde0a1f189528027cabb.js
 application/index.js: application-f7b7c310db69dde0a1f189528027cabb.js
-application.css: application-10590df3a81b6a6aa95535bd9ee2da51.css
-application/index.css: application-10590df3a81b6a6aa95535bd9ee2da51.css
+application.css: application-d343a5a212bd721c00851cb8dc642700.css
+application/index.css: application-d343a5a212bd721c00851cb8dc642700.css
 jquery.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
 jquery/index.min.map: jquery.min-6336c5bca4c709e809647cdfcb484d0a.map
