--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ development:
   database: tailor
   host: localhost
   pool: 5
-  username: liorlight
+  username: 
   password:
 
 test:
@@ -14,7 +14,7 @@ test:
   database: tailor
   host: localhost
   pool: 5
-  username: liorlight
+  username: 
   password:
 
 production:
@@ -23,5 +23,5 @@ production:
   database: tailor
   host: localhost
   pool: 5
-  username: liorlight
+  username: 
 
